--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ html{
     }
 
     body {
-        background-image: url('file:///C:/Users/saiga/Onedrive/Desktop/oneness/New folder/css/images/background.png');
+        background-image: url('css/images/background.png');
         background-size: cover;
         background-repeat: no-repeat;
     }
